# decision-maker

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  openapi.yaml  render.yaml
.github/workflows/: ci-cd.yml
backend/: .gitignore  Dockerfile  Makefile  decision_maker.db  pyproject.toml
backend/app/: database.py  db.py  db_models.py  main.py  models.py  security.py
backend/app/routers/: auth.py  decision.py  goals.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_decision.py  test_goals.py  test_tasks.py
backend/tests_integration/: conftest.py  test_integration_flow.py
frontend/: Dockerfile  index.html  nginx.conf  tailwind.config.ts  vitest.config.ts
frontend/src/components/: AuthScreen.tsx  Dashboard.tsx  Header.tsx  ProgressCards.tsx  TaskList.tsx
frontend/src/components/ui/: progress.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx
frontend/src/test/: setup.ts
src/: index.css
src/components/: Dashboard.tsx  DecisionPanel.tsx  ProgressCards.tsx  TaskList.tsx
src/contexts/: AuthContext.tsx
src/lib/: api.ts
src/test/: api.test.ts
